data/Java/16-illegal-constructor-name/1/[M]Error.txt
*https://www.tutorialspoint.com/java/java_constructors.htm
Program.java:6: error: invalid method declaration; return type required
    MyClas(int i ) {
    ^